# tts-papers

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  package-lock.json  package.json  papers.csv  pyproject.toml  topics
.github/workflows/: fetch_papers.yml  format.yml
papers/: README.md
papers/2017/: 1702.07825.md  1703.10135.md  1704.00849.md  1704.03626.md  1704.04222.md  1705.08947.md  1707.01090.md  1707.01670.md  1707.06588.md  1707.08435.md  1708.00853.md  1709.08041.md  1710.07654.md  1710.08969.md  1711.00354.md  1711.00520.md  1711.10433.md  1711.11293.md  1712.04787.md  1712.05884.md  1801.01442.md  README.md  s2:25825b97b3ef21eb50e209961cf72c09755c6b11.md  s2:4185286ec9d65086803c3ddf1cae1b27a9d6b5bb.md  s2:8a94e63458f01dfdcf591551c23c7ae25da051e6.md  s2:9092a07fff3143ea987d706267f3f50b2922e94a.md  s2:9203d6c076bffe87336f2ea91f5851436c02dbe6.md  s2:9ca31730a8779aaf08c9c3be95250aff3f7765e4.md
papers/2018/: 1801.01554.md  1801.06492.md  1802.06006.md  1802.06984.md  1802.08435.md  1803.00860.md  1803.02445.md  1803.09017.md  1803.09047.md  1804.00425.md  1804.00779.md  1804.00920.md  1804.02135.md  1804.02549.md  1804.02812.md  1804.04262.md  1804.09593.md  1804.11055.md  1805.02958.md  1806.00927.md  1806.02169.md  1806.06116.md  (+65 more)
scripts/: convert_papers.py  fetch_papers.py
tests/: conftest.py  test_citations.py  test_error_handling.py  test_formatting.py  test_html_to_md.py  test_indexes.py  test_latex_to_md.py  test_orchestrator.py  test_output.py  test_pdf_to_md.py  test_readme_table.py  test_remediation.py  test_sources.py
(+3202 files in other folders)
