[project]
name = "tts-papers"
version = "0.1.0"
description = "Curated text-to-speech papers + LLM-friendly markdown conversion."
requires-python = ">=3.12"
dependencies = [
    "marker-pdf>=1.2.0",
    "anthropic>=0.46.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.5",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
